--- a/isaac-lief.html
+++ b/isaac-lief.html
@@ -6,270 +6,145 @@
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
+  body {margin:0;background:#f5f7fb;font-family:'Montserrat',sans-serif;}
+  .prospect-page {max-width:960px;margin:0 auto 3rem;padding:1.5rem;color:#1a1a1a;}
 
-  .prospect-page {
-    max-width: 960px;
-    margin: 0 auto 2.5rem auto;
-    font-family: 'Montserrat', sans-serif;
-    color: #1a1a1a;
-  }
+  /* HERO */
+  .prospect-hero {display:flex;flex-wrap:wrap;justify-content:space-between;gap:1.25rem;
+    padding:1.75rem;border-radius:14px;background:#2E5084;color:#fff;margin-bottom:2rem;}
+  .prospect-name {font-family:'Archivo Black';font-size:2rem;margin-bottom:.25rem;text-transform:uppercase;}
+  .prospect-tagline {font-size:1rem;font-weight:600;margin-bottom:.15rem;}
+  .prospect-subtitle {font-size:.9rem;opacity:.9;margin:0;}
+  .prospect-grade-card {min-width:200px;padding:1rem 1.25rem;border-radius:12px;
+    background:rgba(255,255,255,.15);border:1px solid rgba(255,255,255,.35);backdrop-filter:blur(4px);}
+  .grade-label {font-size:.7rem;opacity:.8;text-transform:uppercase;}
+  .grade-score {font-family:'Archivo Black';font-size:2.2rem;margin:.2rem 0;}
+  .grade-tier {font-size:.9rem;font-weight:600;}
 
-  .prospect-hero {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 1.25rem;
-    padding: 1.5rem 1.25rem;
-    border-radius: 12px;
-    background: #2E5084;
-    color: #ffffff;
-    margin-bottom: 1.5rem;
-  }
+  /* Pills */
+  .recommendation-pill {display:flex;align-items:center;gap:6px;background:#fff;color:#2E5084;
+    padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:.55rem;width:fit-content;}
+  .pill-box {width:12px;height:12px;border-radius:3px;}
+  .pill-red {background:#ef4444;}
 
-  .prospect-name {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.85rem;
-    margin: 0 0 0.25rem;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-  }
+  /* META */
+  .prospect-meta {display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
+  .meta-column {flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
+  .meta-title {font-family:'Archivo Black';font-size:.9rem;color:#2E5084;margin-bottom:.7rem;text-transform:uppercase;}
+  .meta-list {list-style:none;margin:0;padding:0;}
+  .meta-list li {display:flex;justify-content:space-between;padding:.28rem 0;
+    border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
+  .meta-value {text-align:right;margin-left:1rem;}
 
-  .prospect-tagline {
-    margin: 0 0 0.15rem;
-    font-size: 0.95rem;
-    font-weight: 600;
-  }
-
-  .prospect-subtitle {
-    margin: 0;
-    font-size: 0.85rem;
-    opacity: 0.9;
-  }
-
-  .prospect-grade-card {
-    min-width: 180px;
-    padding: 0.75rem 1rem;
-    border-radius: 10px;
-    background: rgba(255,255,255,0.15);
-    border: 1px solid rgba(255,255,255,0.3);
-    backdrop-filter: blur(4px);
-  }
-
-  .grade-label {
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    opacity: 0.8;
-    margin-bottom: 0.25rem;
-  }
-
-  .grade-score {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.9rem;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-tier {
-    font-size: 0.8rem;
-    font-weight: 600;
-  }
-
-  .grade-note {
-    font-size: 0.75rem;
-    opacity: 0.85;
-  }
-
-  .prospect-meta {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-  }
-
-  .meta-column {
-    flex: 1 1 260px;
-    background: #ffffff;
-    border-radius: 10px;
-    padding: 1rem 1.1rem;
-    border: 1px solid #dce2ee;
-  }
-
-  .meta-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.85rem;
-    text-transform: uppercase;
-    letter-spacing: 0.07em;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .meta-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .meta-list li {
-    display: flex;
-    justify-content: space-between;
-    padding: 0.2rem 0;
-    border-bottom: 1px dotted #e5e8f1;
-    font-size: 0.85rem;
-  }
-
-  .meta-value {
-    text-align: right;
-    margin-left: 1rem;
-  }
-
-  .prospect-section {
-    margin-bottom: 1.25rem;
-    padding: 1rem 1.1rem;
-    border-radius: 10px;
-    border: 1px solid #dce2ee;
-    background: #ffffff;
-  }
-
-  .section-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .section-body {
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list {
-    padding-left: 1.1rem;
-    margin: 0;
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list li {
-    margin-bottom: 0.35rem;
-  }
+  /* CONTENT */
+  .prospect-section {background:#fff;border-radius:12px;padding:1.15rem 1.35rem;border:1px solid #dce2ee;margin-bottom:1.4rem;}
+  .section-title {font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
+  .section-body {font-size:.9rem;line-height:1.52;}
+  .section-list li {font-size:.9rem;line-height:1.52;margin-bottom:.38rem;}
 </style>
 </head>
 
 <body>
 <div class="prospect-page">
 
-  <!-- HERO -->
+  <!-- ================= HERO ================= -->
   <section class="prospect-hero">
-    <div class="prospect-hero-main">
-      <h1 class="prospect-name">ISAAC LIEF</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️ Prospect · Goal Keeper Archetype · Investment Banking Track</p>
-      <p class="prospect-subtitle">Duke University · Fencing 🤺 · Class of 2028</p>
+    <div>
+      <h1 class="prospect-name">Isaac Lief</h1>
+      <p class="prospect-tagline">⭐️⭐️⭐️ Investment Banking Prospect</p>
+      <p class="prospect-subtitle">Duke University · Fencing · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
       <div class="grade-score">81</div>
-      <div class="grade-tier">Round 5–6 Candidate</div>
-      <div class="grade-note">Round 1 tools · Round 5–6 consistency</div>
+      <div class="grade-tier">Round 4–5</div>
+
+      <div class="recommendation-pill">
+        <div class="pill-box pill-red"></div>
+        <div class="pill-box pill-red"></div>
+        <div class="pill-box pill-red"></div>
+        <span>Watchlist Recommendation</span>
+      </div>
     </div>
   </section>
 
-  <!-- META -->
-  <section class="prospect-meta">
 
+  <!-- ================= META ================= -->
+  <section class="prospect-meta">
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
         <li><span>School</span><span class="meta-value">Duke University</span></li>
-        <li><span>Major</span><span class="meta-value">Computer Science &amp; Statistics</span></li>
+        <li><span>Major</span><span class="meta-value">Computer Science & Statistics</span></li>
         <li><span>Minor</span><span class="meta-value">Finance</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
+        <li><span>GPA</span><span class="meta-value">3.96</span></li>
         <li><span>Sport</span><span class="meta-value">Fencing</span></li>
-        <li><span>Hometown</span><span class="meta-value">Pelham, NY</span></li>
+        <li><span>Hometown</span><span class="meta-value">Newport Beach, CA</span></li>
       </ul>
     </div>
 
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span>Official Points</span><span class="meta-value">718.5</span></li>
-        <li><span>Cumulative Rank</span><span class="meta-value">27 / 63</span></li>
-        <li><span>Phase 1 Rank</span><span class="meta-value">18 / 63</span></li>
-        <li><span>Phase 2 Rank</span><span class="meta-value">27 / 30</span></li>
-        <li>
-          <span>Personality</span>
-          <span class="meta-value">
-            5. Goal Keeper<br>
-            (Input-driven · accountable · process-focused)
-          </span>
-        </li>
-        <li>
-          <span>Leadership</span>
-          <span class="meta-value">
-            Autocratic Leader<br>
-            (Decisive · directional · performance-oriented)
-          </span>
-        </li>
+        <li><span>Fellowship Rank</span><span class="meta-value">27 / 78</span></li>
+        <li><span>Interview #1</span><span class="meta-value">95.3%</span></li>
+        <li><span>Interview #2</span><span class="meta-value">94.2%</span></li>
+        <li><span>Interview #3</span><span class="meta-value">92.9%</span></li>
+        <li><span>Personality</span><span class="meta-value">Goal Keeper (Disciplined, Structured)</span></li>
+        <li><span>Leadership</span><span class="meta-value">Autocratic Leader (Decisive, High Accountability)</span></li>
+        <li><span>Teamwork</span><span class="meta-value">Supportive (Steady, Reliable)</span></li>
       </ul>
     </div>
-
   </section>
 
-  <!-- OVERVIEW -->
+
+  <!-- ================= CONTENT ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Isaac is one of the most naturally gifted prospects in the Diamond League class — the rare candidate whose 
-      academic horsepower, technical ceiling, and competitive background look like a prototypical Round 1 analyst 
-      profile. With a 3.96 GPA in Computer Science & Statistics at Duke and a disciplined Division I fencing 
-      schedule, he brings a level of structure, composure, and analytical fluency far above the average first-year prospect.
+      Isaac is one of the most naturally gifted prospects in the Diamond League class — the rare candidate whose academic horsepower, technical ceiling, and competitive background look like a prototypical Round 1 analyst profile. With a 3.96 GPA in Computer Science & Statistics at Duke and a disciplined Division I fencing schedule, he brings structure, composure, and analytical fluency well above the average first-year prospect.
       <br><br>
-      Where his file diverges is consistency. Isaac performs at a high level when the stakes are elevated — interviews, 
-      live sessions, or high-visibility touchpoints — but struggled to maintain the same urgency and reliability 
-      across the full MAP calendar. Several missed or incomplete assignments created a gap between his Round 1 
-      potential and Round 5–6 execution.
+      Where his file diverges is consistency. Isaac performs at a high level when the stakes are elevated — interviews, live sessions, or high-visibility touchpoints — but struggled to maintain the same urgency and reliability across the full MAP calendar. Several missed or incomplete assignments created a gap between Round 1 potential and Round 5–6 execution.
       <br><br>
-      The encouraging piece: every signal suggests this gap is fixable. His mindset is deeply input-driven, his 
-      interview presence is poised, and his technical foundation is elite. With more disciplined week-to-week 
-      follow-through, Isaac has the ceiling to emerge as a high-upside analyst for firms that value long-term 
-      development and raw intellectual horsepower.
+      The upside is real — and fixable. His mindset is input-driven, his presence is poised, and his technical foundation is elite. With greater week-to-week discipline, he could rise quickly as a high-upside analyst for firms that invest in development.
     </p>
   </section>
 
-  <!-- STRENGTHS -->
+
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Elite academic profile:</strong> 3.96 GPA in CS & Statistics — rare mix of technical precision and analytical depth.</li>
-      <li><strong>High-stakes performer:</strong> Shows up strongest in interviews and marquee MAP moments.</li>
-      <li><strong>Goal Keeper mindset:</strong> Disciplined, accountable, and committed to strong inputs.</li>
-      <li><strong>Technical ceiling:</strong> Strong quantitative skillset that can translate quickly in banking or consulting roles.</li>
-      <li><strong>Division I athletic rigor:</strong> Fencing builds timing, pressure-management, and composure.</li>
-      <li><strong>Poised communicator:</strong> Calm, structured thinker with strong professional presence.</li>
+      <li>Elite academic profile — 3.96 GPA in CS & Statistics.</li>
+      <li>High-stakes performer — strongest in interviews + live settings.</li>
+      <li>Goal Keeper mindset — disciplined, structured, input-driven.</li>
+      <li>Strong technical ceiling with quantitative fluency.</li>
+      <li>D1 athletic rigor — composure + timing under pressure.</li>
+      <li>Poised communicator with strong professional tone.</li>
     </ul>
   </section>
 
-  <!-- AREAS FOR DEVELOPMENT -->
+
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Needs stronger week-to-week reliability to match Round 1 ability with Round 1 consistency.</li>
-      <li>Must apply the same intensity to routine assignments that he brings to high-stakes environments.</li>
-      <li>Improving time management will help close the gap between potential and execution.</li>
+      <li>Improve reliability week-to-week across deliverables.</li>
+      <li>Match routine assignment urgency to live performance level.</li>
+      <li>Refine time management to align output with high ceiling.</li>
     </ul>
   </section>
 
-  <!-- PROJECTION -->
+
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A Round 5–6 MAP prospect with undeniable Round 1 talent. Isaac’s technical upside, composure, and intellectual 
-      horsepower give him a high long-term ceiling. If he tightens reliability and embraces consistent follow-through, 
-      he has the potential to rise rapidly in competitive 2027 investment banking and consulting pipelines.
+      A Round 5–6 MAP prospect with Round 1 talent. Isaac’s technical ability, composure, and academic horsepower give him a high long-term ceiling. With more consistent execution and follow-through, he could develop rapidly in 2027 banking or consulting pipelines.
     </p>
   </section>
 
 </div>
 </body>
 </html>
+
 
