--- a/gavin-williams.html
+++ b/gavin-williams.html
@@ -2,296 +2,149 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Joshua G. Williams — MAP Scouting Report</title>
+<title>Joshua "Gavin" Williams — MAP Scouting Report</title>
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
+  body {margin:0;background:#f5f7fb;font-family:'Montserrat',sans-serif;}
+  .prospect-page {max-width:960px;margin:0 auto 3rem;padding:1.5rem;color:#1a1a1a;}
 
-  .prospect-page {
-    max-width: 960px;
-    margin: 0 auto 2.5rem auto;
-    font-family: 'Montserrat', sans-serif;
-    color: #1a1a1a;
-  }
+  /* HERO */
+  .prospect-hero {display:flex;flex-wrap:wrap;justify-content:space-between;gap:1.25rem;
+    padding:1.75rem;border-radius:14px;background:#2E5084;color:#fff;margin-bottom:2rem;}
+  .prospect-name {font-family:'Archivo Black';font-size:2rem;margin-bottom:.25rem;text-transform:uppercase;}
+  .prospect-tagline {font-size:1rem;font-weight:600;margin-bottom:.15rem;}
+  .prospect-subtitle {font-size:.9rem;opacity:.9;margin:0;}
+  .prospect-grade-card {min-width:200px;padding:1rem 1.25rem;border-radius:12px;
+    background:rgba(255,255,255,.15);border:1px solid rgba(255,255,255,.35);backdrop-filter:blur(4px);}
+  .grade-label {font-size:.7rem;opacity:.8;text-transform:uppercase;}
+  .grade-score {font-family:'Archivo Black';font-size:2.2rem;margin:.2rem 0;}
+  .grade-tier {font-size:.9rem;font-weight:600;}
 
-  .prospect-hero {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 1.25rem;
-    padding: 1.5rem 1.25rem;
-    border-radius: 12px;
-    background: #2E5084;
-    color: #ffffff;
-    margin-bottom: 1.5rem;
-  }
+  /* Pills */
+  .recommendation-pill {display:flex;align-items:center;gap:6px;background:#fff;color:#2E5084;
+    padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:.55rem;width:fit-content;}
+  .pill-box {width:12px;height:12px;border-radius:3px;}
+  .pill-red {background:#ef4444;}
 
-  .prospect-hero-main {
-    flex: 1 1 60%;
-    max-width: 70%;
-    min-width: 260px;
-  }
+  /* META */
+  .prospect-meta {display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
+  .meta-column {flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
+  .meta-title {font-family:'Archivo Black';font-size:.9rem;color:#2E5084;margin-bottom:.7rem;text-transform:uppercase;}
+  .meta-list {list-style:none;margin:0;padding:0;}
+  .meta-list li {display:flex;justify-content:space-between;padding:.28rem 0;
+    border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
+  .meta-value {text-align:right;margin-left:1rem;}
 
-  .prospect-name {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.85rem;
-    margin: 0 0 0.25rem;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-  }
-
-  .prospect-tagline {
-    margin: 0 0 0.15rem;
-    font-size: 0.95rem;
-    font-weight: 600;
-  }
-
-  .prospect-subtitle {
-    margin: 0;
-    font-size: 0.85rem;
-    opacity: 0.9;
-  }
-
-  .prospect-grade-card {
-    min-width: 180px;
-    padding: 0.75rem 1rem;
-    border-radius: 10px;
-    background: rgba(255,255,255,0.15);
-    border: 1px solid rgba(255,255,255,0.3);
-    backdrop-filter: blur(4px);
-  }
-
-  .grade-label {
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    opacity: 0.8;
-    margin-bottom: 0.25rem;
-  }
-
-  .grade-score {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.9rem;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-tier {
-    font-size: 0.8rem;
-    font-weight: 600;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-note {
-    font-size: 0.75rem;
-    opacity: 0.85;
-  }
-
-  .prospect-meta {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-  }
-
-  .meta-column {
-    flex: 1 1 260px;
-    background: #ffffff;
-    border-radius: 10px;
-    padding: 1rem 1.1rem;
-    border: 1px solid #dce2ee;
-  }
-
-  .meta-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.85rem;
-    text-transform: uppercase;
-    letter-spacing: 0.07em;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .meta-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .meta-list li {
-    display: flex;
-    justify-content: space-between;
-    padding: 0.2rem 0;
-    border-bottom: 1px dotted #e5e8f1;
-    font-size: 0.85rem;
-  }
-
-  .meta-value {
-    text-align: right;
-    margin-left: 1rem;
-  }
-
-  .prospect-section {
-    margin-bottom: 1.25rem;
-    padding: 1rem 1.1rem;
-    border-radius: 10px;
-    border: 1px solid #dce2ee;
-    background: #ffffff;
-  }
-
-  .section-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .section-body {
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list {
-    padding-left: 1.1rem;
-    margin: 0;
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list li {
-    margin-bottom: 0.35rem;
-  }
-
-  @media (max-width: 640px) {
-    .meta-list li {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    .meta-value {
-      text-align: left;
-      margin-left: 0;
-      margin-top: 0.1rem;
-    }
-  }
+  /* CONTENT */
+  .prospect-section {background:#fff;border-radius:12px;padding:1.15rem 1.35rem;border:1px solid #dce2ee;margin-bottom:1.4rem;}
+  .section-title {font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
+  .section-body {font-size:.9rem;line-height:1.52;}
+  .section-list li {font-size:.9rem;line-height:1.52;margin-bottom:.38rem;}
 </style>
 </head>
 
 <body>
 <div class="prospect-page">
 
-  <!-- HERO -->
+  <!-- ============ HERO ============ -->
   <section class="prospect-hero">
-    <div class="prospect-hero-main">
-      <h1 class="prospect-name">JOSHUA G. WILLIAMS</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️ Prospect · Two-Way Player Archetype · Investment Banking Track</p>
-      <p class="prospect-subtitle">Princeton University · Football 🏈 · Class of 2028</p>
+    <div>
+      <h1 class="prospect-name">Joshua "Gavin" Williams</h1>
+      <p class="prospect-tagline">⭐️⭐️⭐️ Investment Banking Prospect</p>
+      <p class="prospect-subtitle">Princeton University · Football · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
       <div class="grade-score">81</div>
-      <div class="grade-tier">Round 4–5 Candidate</div>
-      <div class="grade-note">Elite behavioral upside; résumé and consistency still developing</div>
+      <div class="grade-tier">Round 4–5</div>
+
+      <div class="recommendation-pill">
+        <div class="pill-box pill-red"></div>
+        <div class="pill-box pill-red"></div>
+        <div class="pill-box pill-red"></div>
+        <span>Watchlist Recommendation</span>
+      </div>
     </div>
   </section>
 
-  <!-- META -->
-  <section class="prospect-meta">
 
-    <!-- Prospect Info -->
+  <!-- ============ META ============ -->
+  <section class="prospect-meta">
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
         <li><span>School</span><span class="meta-value">Princeton University</span></li>
         <li><span>Major</span><span class="meta-value">Economics</span></li>
-        <li><span>Minor</span><span class="meta-value">N/A</span></li>
+        <li><span>Minor</span><span class="meta-value">Finance</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
         <li><span>GPA</span><span class="meta-value">3.1</span></li>
-        <li><span>Sport</span><span class="meta-value">Football 🏈</span></li>
-        <li><span>Hometown</span><span class="meta-value">Trussville, AL</span></li>
+        <li><span>Sport</span><span class="meta-value">Football</span></li>
+        <li><span>Hometown</span><span class="meta-value">Larkspur, CA</span></li>
       </ul>
     </div>
 
-    <!-- MAP Profile -->
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span>Official Points</span><span class="meta-value">713.5</span></li>
-        <li><span>Cumulative Rank</span><span class="meta-value">28 / 63</span></li>
-        <li><span>Phase 1 Rank</span><span class="meta-value">22 / 63</span></li>
-        <li><span>Phase 2 Rank</span><span class="meta-value">28 / 30</span></li>
-        <li>
-          <span>Personality</span>
-          <span class="meta-value">
-            14. Two-Way Player<br>
-            (Socially Attuned Personality · adaptive communication · relationship range)
-          </span>
-        </li>
-        <li>
-          <span>Leadership</span>
-          <span class="meta-value">
-            Bureaucratic Leader<br>
-            (By the Book · process discipline · consistency)
-          </span>
-        </li>
+        <li><span>Fellowship Rank</span><span class="meta-value">28 / 78</span></li>
+        <li><span>Interview #1</span><span class="meta-value">94.1%</span></li>
+        <li><span>Interview #2</span><span class="meta-value">88.5%</span></li>
+        <li><span>Interview #3</span><span class="meta-value">86.2%</span></li>
+        <li><span>Personality</span><span class="meta-value">Two-Way Player (Adaptive, Socially Fluent)</span></li>
+        <li><span>Leadership</span><span class="meta-value">Bureaucratic Leader (Process-Driven, Rule-Oriented)</span></li>
+        <li><span>Teamwork</span><span class="meta-value">Supportive (Steady, Reliable)</span></li>
       </ul>
     </div>
-
   </section>
 
-  <!-- OVERVIEW -->
+
+  <!-- ============ CONTENT ============ -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      One of the highest-upside behavioral profiles in the entire Diamond League class. Joshua brings natural
-      interpersonal presence, strong curiosity, and a Two-Way Player adaptability that makes him comfortable in
-      almost any room. He communicates well, asks thoughtful questions, and consistently engages with the material.
+      One of the highest-upside behavioral profiles in the entire Diamond League class. Joshua brings natural interpersonal presence, strong curiosity, and a Two-Way Player adaptability that makes him comfortable in almost any room. He communicates well, asks thoughtful questions, and consistently engages with the material.
       <br><br>
-      His MAP performance is solid from a reliability standpoint — assignments generally submitted on time — but he
-      occasionally skipped details or misread instructions, signaling that his eagerness sometimes outpaces his
-      preparation. The intent is strong; the process needs tightening so that his day-to-day work matches the quality
-      of his presence.
+      His MAP performance is solid from a reliability standpoint — assignments generally submitted on time — but he occasionally skipped details or misread instructions, signaling that eagerness sometimes outpaces preparation. The intent is strong; the process needs tightening so his day-to-day work matches his presence.
       <br><br>
-      With a GPA and résumé that are still developing, Joshua isn’t yet at the top of the analyst-ready pipeline.
-      But his elite behavioral foundation, genuine curiosity, and coachable demeanor give him meaningful long-term
-      upside. He is exactly the type of candidate who could benefit from a second MAP fellowship season to fully
-      realize his potential.
+      With GPA and résumé still developing, Joshua isn't yet analyst-ready — but his behavioral foundation, curiosity, and coachability give him meaningful upside. He is the type of candidate who could level up significantly with another MAP season.
     </p>
   </section>
 
-  <!-- STRENGTHS -->
+
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Elite adaptability:</strong> Natural Two-Way Player; comfortable communicating with a wide range of personalities and styles.</li>
-      <li><strong>Strong curiosity:</strong> Asks thoughtful, high-quality questions that show genuine engagement and a desire to improve.</li>
-      <li><strong>Reliable engagement:</strong> Stays active and communicative throughout the season; generally on time with submissions.</li>
-      <li><strong>Emotional intelligence:</strong> Reads people well; carries himself with poise, approachability, and authenticity.</li>
-      <li><strong>Leadership exposure:</strong> D1 football, BSAC involvement, NAACP participation, and campus engagement signal community orientation.</li>
-      <li><strong>Early finance reps:</strong> WCAS experience and Training the Street coursework provide a solid introductory finance foundation.</li>
+      <li>Elite adaptability — natural Two-Way Player in any room.</li>
+      <li>Curious mindset — thoughtful questions, high engagement.</li>
+      <li>Reliable and communicative throughout season.</li>
+      <li>Strong emotional intelligence and presence.</li>
+      <li>Leadership exposure via athletics and campus orgs.</li>
+      <li>Early finance reps via WCAS + TTS coursework.</li>
     </ul>
   </section>
 
-  <!-- AREAS FOR DEVELOPMENT -->
+
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Slow down to fully read and internalize instructions before asking questions or submitting work.</li>
-      <li>Strengthen GPA and on-paper résumé to better align with his behavioral talent and room presence.</li>
-      <li>Build more technical and analytical reps (accounting, valuation, basic modeling) to complement communication strengths.</li>
-      <li>Would benefit from another full MAP cycle to harden professional habits, detail orientation, and consistency.</li>
+      <li>Slow down — fully read instructions before submitting.</li>
+      <li>Strengthen GPA and résumé depth.</li>
+      <li>Build more technical reps across valuation + accounting.</li>
+      <li>Would benefit from another MAP cycle to sharpen detail habits.</li>
     </ul>
   </section>
 
-  <!-- PROJECTION -->
+
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A Round 4–5 MAP prospect with an elite behavioral foundation and natural Two-Way Player instincts. Joshua’s
-      communication, curiosity, and adaptability give him real long-term potential — but he needs structure,
-      repetition, and continued résumé building before entering competitive 2027 pipelines. A second MAP fellowship
-      would likely elevate him into a stronger Round 2–3 conversation.
+      A Round 4–5 MAP prospect with elite behavioral instincts and Two-Way Player adaptability. Joshua’s communication, curiosity, and presence give him real long-term potential — but he needs structure, repetition, and continued résumé growth to reach analyst readiness. A second MAP fellowship could elevate him into Round 2–3 territory.
     </p>
   </section>
 
 </div>
 </body>
 </html>
+
